CalculInterrompu + test table import + normalisation données import betSize + quelques optis